Licence and CopyRight

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+#
+# /*
+#  * © 2025 Praveen Kumar. All rights reserved.
+#  *
+#  * This software is licensed under the MIT License.
+#  * See the LICENSE file in the root directory for more information.
+#  */
+#
+#
+
 spring.application.name=sololevelling
 # === Server config ===
 server.port=8080
