--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ /*
+  ~  * © 2025 Praveen Kumar. All rights reserved.
+  ~  *
+  ~  * This software is licensed under the MIT License.
+  ~  * See the LICENSE file in the root directory for more information.
+  ~  */
+  ~
+  -->
+
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
