--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ server.port=8080
 # === PostgreSQL DB ===
 spring.datasource.url=jdbc:mysql://localhost:3306/sologym
 spring.datasource.username=root
-spring.datasource.password=6246
+spring.datasource.password=Pintu@1617
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # === JPA / Hibernate ===
 spring.jpa.hibernate.ddl-auto=update
