--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,13 +10,10 @@
 spring.application.name=sololevelling
 # === Server config ===
 server.port=8080
-# === MySQL DB ===
-spring.datasource.url=jdbc:mysql://localhost:3306/sologym
-spring.datasource.username=root
-spring.datasource.password=6246
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# === JPA / Hibernate ===
-spring.jpa.hibernate.ddl-auto=update
+# === Mongo DB ===
+spring.data.mongodb.uri=${MONGO_URI}
+spring.data.mongodb.database=${MONGO_COLLECTION}
+spring.data.mongodb.auto-index-creation=true
 # === JWT Secret ===
 app.jwt.secret=${JWT_SECRET}
 app.jwt.expiration=${JWT_EXPIRATION}
