add admin configuration properties and initialize admin user setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,9 @@ spring.data.mongodb.auto-index-creation=true
 # === JWT Secret ===
 app.jwt.secret=${JWT_SECRET}
 app.jwt.expiration=${JWT_EXPIRATION}
+# === Admin Configuration ===
+app.admin.email=${ADMIN_EMAIL}
+app.admin.password=${ADMIN_PASSWORD}
 # === Swagger UI ===
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
